# morphogen

./: README.md  morphogen_mcp.py  pyproject.toml  requirements.txt
morphogen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/morphogen/: __init__.py  lifespan.py
src/morphogen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/morphogen/resources/: __init__.py  identity.py
src/morphogen/tools/: __init__.py  system.py
