[project]
name = "morphogen"
version = "0.1.0"
description = "Morphogen MCP Server for infrastructure tools"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "httpx>=0.24.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[tool.uv]
# editable-installs = ["."]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["morphogen"]
